# Animation

./: CMakeLists.txt  README.md  default_lists.cmake
Common/: Animation.cpp  Animation.h  AnimationJob.cpp  AnimationJob.h  BlendingJob.cpp  BlendingJob.h  BundleReader.cpp  BundleReader.h  CMakeLists.txt  LoadFile.cpp  LoadFile.h  LocalToModelJob.cpp  LocalToModelJob.h  Mesh.h  RawAnimation.cpp  RawAnimation.h  RawAnimationJob.cpp  RawAnimationJob.h  Skeleton.cpp  Skeleton.h  SkinningJob.cpp  SkinningJob.h  Utils.cpp  Utils.h  skeleton_utils.cpp  skeleton_utils.h  span.h
Common/framework/: Application.cpp  Application.h  Camera.cpp  Camera.h  IWindow.h  Immediate.cpp  Immediate.h  PlaybackController.cpp  PlaybackController.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Common/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h
Math/: CMakeLists.txt  Mat3.h  Math.h  MathUtil.cpp  MathUtil.h  Quaternion.cpp  Quaternion.h  Rect.h  Transform.h  Vec3.h  Vec4.h
Samples/additive_blend/: CMakeLists.txt  sample_additive.cpp
Samples/attach/: CMakeLists.txt  sample_attach.cpp
Samples/blend/: CMakeLists.txt  sample_blend.cpp
Samples/partial_blend/: CMakeLists.txt  sample_partial_blend.cpp
Samples/playback/: CMakeLists.txt  sample_playback.cpp
Samples/skinning/: CMakeLists.txt  sample_skinning.cpp
System/: CMakeLists.txt  DataStruct.cpp  DataStruct.h  Delegate.cpp  Delegate.h  Macros.h  SafeQueue.h  System.h  TypeHash.h  UsualFile.cpp  UsualFile.h  Utility.hpp
System/Platform/: PlatformConfig.h
System/Platform/Windows/: FPlatformMisc.cpp  FPlatformMisc.h
Third/glad/: CMakeLists.txt
Third/glfw-3.3.5/src/: CMakeLists.txt
Third/stb_image/: CMakeLists.txt
media/Attack/: Attack.mesh  Take 001_animation.ozz  Take 001_raw_animation.ozz  skeleton.ozz
media/Monster/: Take 001_animation.ozz  Take 001_raw_animation.ozz  skeleton.ozz
media/Walk/: Take 001_animation.ozz  Take 001_raw_animation.ozz  skeleton.ozz
media/additive/: curl.ozz  skeleton.ozz  splay.ozz
media/blend_test/: raw_animation1.ozz  raw_animation2.ozz
media/cesium_man/: animation_0.ozz  raw_animation_0.ozz  skeleton.ozz
media/partial_blend_test/: crossarms.ozz  jog.ozz  run.ozz  skeleton.ozz  walk.ozz
